# pipetable-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: release.yml
demo/data/: customers.csv  sales.csv
src/: cli.rs  engine.rs  main.rs  ollama.rs  server.rs
