[package]
name = "pipetable-mcp"
version = "0.2.0"
edition = "2021"
description = "Pipetable MCP Server — query local data files from any AI tool"

[[bin]]
name = "pipetable-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.10502.0", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
