[package]
name = "pipetable-mcp"
version = "0.2.0"
edition = "2021"
description = "Pipetable MCP Server — query local data files from any AI tool"
homepage = "https://pipetable.com"
repository = "https://github.com/melihbirim/pipetable-mcp"
license-file = "LICENSE"
keywords = ["mcp", "duckdb", "data", "csv", "parquet"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pipetable-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.10502.0", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
