[package]
name = "pipetable"
version = "0.4.0"
edition = "2021"
description = "Query local data files with natural language or SQL — MCP server + CLI"
homepage = "https://pipetable.com"
repository = "https://github.com/melihbirim/pipetable"
license = "MIT"
keywords = ["mcp", "duckdb", "data", "csv", "parquet"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pipetable"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.10502.0", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
rustyline = "14"
colored = "2"
calamine = { version = "0.26", features = ["dates"] }
